--- a/multimedia/Multimedia.html
+++ b/multimedia/Multimedia.html
@@ -9,11 +9,17 @@
       <img src="img/JayT.jpeg" alt="MVP" width="400" heigth="400">
 
       <h2>Video</h2>
-
+      <video  controls poster autoplay muted poster="img/JayT.jpeg" >
+        <source  src="video/Zeppelin_Explodes.webm" type="video/webm">
+      </video>
       <h3>Audio</h3>
-
+        <audio  controls autoplay muted  loop>
+        <source  src="audio/Endless Night.mp3"  type="audio/mp3">
+        </audio>
+        <audio src=""> controls autoplay</audio>
       <h1>Objetos embebidos</h1>
       
       <h1>DJ</h1>
+
   </body>
 </html>
