--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Mi primera web</title>
   </head>
   <body>
-    <h1><a href="https://lguardia.github.io/1EVAL_HTMLyCSS_AW_2SMRC_lguardia/" target="_blank">index</a></h1>
-    <h2>Hola Mundo</h2>
-    <h3>Hola Mundo</h3>
-    <h4>Hola Mundo</h4>
+    <h1><a href="index.html" target="_blank">index</a></h1>
+    <h2><a href="miprimeraweb/index.html">Miprimera web</a></h2>
+    <h3><a href="multimedia/Multimedia.html">Multimedia</a></h3>
+    <h4><a href="Formularios/Formularios/Formulario.html">Formulario</a></h4>
     <h5>Hola Mundo</h5>
   </body>
 </html>
