--- a/Formularios/Formularios/Formulario.html
+++ b/Formularios/Formularios/Formulario.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+
+<body>
   <form action="DJ.php" method="get">
+  <fieldset>
+      <legend>Datos personales</legend>
     <p>Nombre: <input type="text" name="nombre" required></p>
-    <p>Apellidos: <input type="text" name="Apellidos"  size="40"></p>
+    <p>Apellidos: <input type="text" name="Apellidos" size="40"></p>
+  </fieldset>
     <p>Edad:
-    <input type="radio" name="Edad" value="menor"> Menor
-    <input type="radio" name="Edad" value="mayor"> Adulto
-    <P>Contraseña: <input type="password" name="Contraseña" ></P>
+      <input type="radio" name="Edad" value="menor"> Menor
+      <input type="radio" name="Edad" value="mayor"> Adulto
+    <P>Contraseña: <input type="password" name="Contraseña"></P>
+    <input type="submit" value="Enviar">
+    <p>Hora de entrega: <input type="time" name="Hora" id="Hora1"></p>
+    
     </p>
 
   </form>
-  </body>
+</body>
+
 </html>
