--- a/Formularios/Formularios/Formulario.html
+++ b/Formularios/Formularios/Formulario.html
@@ -19,7 +19,9 @@
     <P>Contraseña: <input type="password" name="Contraseña"></P>
     <input type="submit" value="Enviar">
     <p>Hora de entrega: <input type="time" name="Hora" id="Hora1"></p>
-    
+    <input type="text" name="texto1" placeholder="texto1">
+    <input type="text" name="texto2" placeholder="texto2">
+    <input type="text" name="texto2" placeholder="texto2">
     </p>
 
   </form>
