--- a/multimedia/Multimedia.html
+++ b/multimedia/Multimedia.html
@@ -9,7 +9,7 @@
       <img src="img/JayT.jpeg" alt="MVP" width="400" heigth="400">
 
       <h2>Video</h2>
-      <video  controls poster autoplay muted poster="img/JayT.jpeg" >
+      <video  controls  autoplay muted poster="img/JayT.jpeg" >
         <source  src="video/Zeppelin_Explodes.webm" type="video/webm">
       </video>
       <h3>Audio</h3>
