--- a/Formularios/Formularios/Formulario.html
+++ b/Formularios/Formularios/Formulario.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title></title>
 </head>
-
+  <link rel="stylesheet" href="estilos/estilos.css">
+  
 <body>
   <form action="DJ.php" method="get">
   <fieldset>
