--- a/multimedia/Multimedia.html
+++ b/multimedia/Multimedia.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title></title>
   </head>
+    <style>
+        h1{
+            color: crimson;
+        }
+    </style>
   <body>
       <h1>Imagenes</h1>
       <img src="img/JayT.jpeg" alt="MVP" width="400" heigth="400">
