--- a/miprimeraweb/listas.html
+++ b/miprimeraweb/listas.html
@@ -12,7 +12,7 @@
       <li>tercer elemento</li>
     </ol>
 
-    <ul>
+    <ul style="list-style-type: lower-greek;">
       <li>1</li>
       <li>2</li>
       <li>3</li>
