--- a/Formularios/Formularios/Formulario.html
+++ b/Formularios/Formularios/Formulario.html
@@ -11,13 +11,13 @@
   <form action="DJ.php" method="get">
   <fieldset>
       <legend>Datos personales</legend>
-    <p>Nombre: <input type="text" name="nombre" required></p>
-    <p>Apellidos: <input type="text" name="Apellidos" size="40"></p>
+    <p class="especial">Nombre: <input type="text" name="nombre" required></p>
+    <p id="DJ">Apellidos: <input type="text" name="Apellidos" size="40"></p>
   </fieldset>
     <p>Edad:
       <input type="radio" name="Edad" value="menor"> Menor
       <input type="radio" name="Edad" value="mayor"> Adulto
-    <P>Contraseña: <input type="password" name="Contraseña"></P>
+    <P id="rojo">Contraseña: <input type="password" name="Contraseña"></P>
     <input type="submit" value="Enviar">
     <p>Hora de entrega: <input type="time" name="Hora" id="Hora1"></p>
     <input type="text" name="texto1" placeholder="texto1">
