--- a/ejercicio32.html/ejercicio32.html
+++ b/ejercicio32.html/ejercicio32.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <link rel="stylesheet" href="estilo.css">
-    <p class="frases-celebres" id="frase1"> aquel que escucha bien, toma apuntes.</p>
+    <p class="frases-celebres" id="frase1"> Aquel que escucha bien, toma apuntes.</p>
     <p id="frase2">Si no se modera tu orgullo, el sera tu mayor castigo.</p>
     <p class="frases-celebres">Una poderosa llama sigue a una pequeña chispa. </p>
     <p> El secreto para qu las cosas sean hechas esta en hacerlas.</p>
