--- a/miprimeraweb/listas.html
+++ b/miprimeraweb/listas.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style>
+      ol{
+        list-style-image: url("img/smiley.png");
+
+    }
+    body{
+      background-image: url("img/kobe.jpg");
+    }
+
+    </style>
+    
   </head>
   <body>
     <p style="color:blue">Esto es un párrafo azul</p>
@@ -23,7 +34,7 @@
       <li>8</li>
     </ul>
 
-    <dl>
+    <dl style="color: blueviolet;">
       <dt>Binario</dt>
       <dd>0 o 1</dd>
       <dt>Hexadecimal</dt>
@@ -31,6 +42,14 @@
       <dt>Octal</dt>
       <dd>0,1,2,3,4,5,6,7</dd>
     </dl>
+    <h2>Lista ordenada</h2>
     
+    <ol style="color: aquamarine;">
+      <li>Emilio</li>
+      <li>Axel</li>
+      <li>Jorge</li>
+      <li>Javi</li>
+      <li>Alba</li>
+    </ol>
   </body>
 </html>
