--- a/selectores/descendienteds.html
+++ b/selectores/descendienteds.html
@@ -21,7 +21,9 @@
             background-color: yellow;
             color: black;
         }
-
+        div:hover{
+            background-color: blue;
+        }
 
     </style>
 <body>
