--- a/Formularios/Formularios/Formulario.html
+++ b/Formularios/Formularios/Formulario.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title></title>
 </head>
+  <h1>Formulario</h1>
   <link rel="stylesheet" href="estilos/estilos.css">
   
 <body>
