--- a/ejerciciofloat.html/ejercicicofloat.html
+++ b/ejerciciofloat.html/ejercicicofloat.html
@@ -14,7 +14,7 @@
 <body>
   <p><img src="img/gnu.jpg"Logotipo de GNU (GNU is Not Unix)" alt="Logotipo de GNU (GNU is Not Unix)" width="129" height="122" class="izquierda">El logotipo de GNU debe "flotar" a la izquierda y el párrafo debe fluir a su derecha.</p>
 
-  <hr style="clear:both">
+  <hr style="clear:left">
 
   <p><img src="img/linux.jpg" alt="Tux, la mascota de Linux" title="Tux, la mascota de Linux" width="103" height="122" class="izquierda">El logotipo de Linux, Tux, debe "flotar" a la izquierda y el párrafo debe fluir a su derecha. Seguramente tanto la imagen como el párrafo están a la derecha del logotipo de GNU.</p>
 </body>
